cleanup test code

--- a/src/styles/base/mixins/arrows.less
+++ b/src/styles/base/mixins/arrows.less
@@ -14,11 +14,7 @@
 //    .caret(size, color);
 // }
 
-.caret {
-    padding-left: 4px;
-    .caret(5px, @grey-800);
-}
-
+// Caret
 .caret(@size, @color) {
     position: relative;
     display: inline-block;
@@ -34,7 +30,7 @@
     }
 }
 
-// Box-arrow
+// Arrow on box
 .arrow(@side, @size, @align: 50%, @color, @border-width: 0, @border-color: inherit) {
     // Variables
     @margin-offset: @size + @border-width;
