remove form from vertical-rhytmn, field-classes, placeholder focus

--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -34,7 +34,7 @@
             }
         }
         &:-webkit-autofill {
-            -webkit-box-shadow: 0 0 0px 1000px #fff inset; // Remove forced yellow input background in Chrome
+            -webkit-box-shadow: 0 0 0 1000px #fff inset; // Remove forced yellow input background in Chrome
         }
     }
 
