--- a/src/styles/objects/grid.less
+++ b/src/styles/objects/grid.less
@@ -84,9 +84,9 @@
     }
     .use-column(@use-column);
 
-    // Row variations
+    // Row modifiers
 
-    .use-row-variations(@boolean) when (@boolean =true) {
+    .use-row-modifiers(@boolean) when (@boolean =true) {
 
         // Row with half gutters
         .row--half {
@@ -138,7 +138,7 @@
             }
         }
     }
-    .use-row-variations(@use-row-variations);
+    .use-row-modifiers(@use-row-modifiers);
 }
 
 .use-grid-classes(@use-grid-classes);
