--- a/src/styles/utilities/centering.less
+++ b/src/styles/utilities/centering.less
@@ -11,6 +11,13 @@
         margin-right: auto;
     }
 
+    // Center element vertically
+    .u-center-vertical {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
     // Center element vertically and horizontally
     .u-center-all {
         position: absolute;
