--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -282,6 +282,7 @@
         input.input--underlined,
         textarea.textarea--underlined {
             border: 0;
+            border-radius: 0;
             border-bottom: @input-border-width solid @input-border-color;
             padding-left: 0;
             padding-right: 0;
@@ -331,7 +332,7 @@
                 margin: 0 0 @form-field-margin 0;
             }
             &:last-child .field:last-child,
-            &:last-child .button:last-child{
+            &:last-child .button:last-child {
                 margin-bottom: 0;
             }
         }
