--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -5,8 +5,8 @@
 
     hr,
     .hr {
-        border: solid @hr-color;
-        border-width: 1px 0 0 0;
+        border: 0;
+        border-top: @hr-boder-width solid @hr-border-color;
         clear: both;
         height: 0;
         margin: @spacing-base auto;
