--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -31,7 +31,7 @@
     @import 'objects/icons';
     @import 'objects/embed-wrap';
     @import 'objects/nav-responsive';
-    @import	'objects/spinner';
+    @import	'objects/loader';
     @import	'objects/table-styles';
     @import 'objects/tooltips';
 
