--- a/src/styles/objects/grid.less
+++ b/src/styles/objects/grid.less
@@ -25,7 +25,7 @@
 
         .use-screen-sm(@boolean) when (@boolean =true) {
             .container {
-                max-width: @container-sm;
+                width: @container-sm;
             }
         }
         .use-screen-sm(@use-screen-sm);
@@ -35,7 +35,7 @@
         .use-screen-md(@boolean) when (@boolean =true) {
             @media @md-up {
                 .container {
-                    max-width: @container-md;
+                    width: @container-md;
                 }
             }
         }
@@ -46,7 +46,7 @@
         .use-screen-lg(@boolean) when (@boolean =true) {
             @media @lg-up {
                 .container {
-                    max-width: @container-lg;
+                    width: @container-lg;
                 }
             }
         }
@@ -57,7 +57,7 @@
         .use-screen-xl(@boolean) when (@boolean =true) {
             @media @xl-up {
                 .container {
-                    max-width: @container-xl;
+                    width: @container-xl;
                 }
             }
         }
