--- a/src/styles/utilities/widths.less
+++ b/src/styles/utilities/widths.less
@@ -7,6 +7,11 @@
     // Small Grid for Mobile devices
     .use-screen-sm(@boolean) when (@boolean =true) {
         .make-grid(@grid-columns, width, -sm);
+        .u-width-sm-auto {
+            & when (@use-flex-grid =true) {
+                flex: 1;
+            }
+        }
     }
     .use-screen-sm(@use-screen-sm);
 
@@ -15,6 +20,11 @@
     .use-screen-md(@boolean) when (@boolean =true) {
         @media @md-up {
             .make-grid(@grid-columns, width, -md);
+            .u-width-md-auto {
+                & when (@use-flex-grid =true) {
+                    flex: 1;
+                }
+            }
         }
     }
     .use-screen-md(@use-screen-md);
@@ -24,6 +34,11 @@
     .use-screen-lg(@boolean) when (@boolean =true) {
         @media @lg-up {
             .make-grid(@grid-columns, width, -lg);
+            .u-width-lg-auto {
+                & when (@use-flex-grid =true) {
+                    flex: 1;
+                }
+            }
         }
     }
     .use-screen-lg(@use-screen-lg);
@@ -33,6 +48,11 @@
     .use-screen-xl(@boolean) when (@boolean =true) {
         @media @xl-up {
             .make-grid(@grid-columns, width, -xl);
+            .u-width-xl-auto {
+                & when (@use-flex-grid =true) {
+                    flex: 1;
+                }
+            }
         }
     }
     .use-screen-xl(@use-screen-xl);
