--- a/src/styles/objects/buttons.less
+++ b/src/styles/objects/buttons.less
@@ -1,10 +1,11 @@
 //
 // Buttons
 // -------------------------------------------------------
-.use-buttons(@boolean) when (@boolean = true) {
+.use-buttons(@boolean) when (@boolean =true) {
 
     .button {
         .button-size();
+        font-family: @button-font-family;
         border: @button-border-width solid transparent;
         border-radius: @button-border-radius;
         cursor: pointer;
@@ -27,8 +28,7 @@
             text-decoration: none; // strip styling from <a>.
         }
         &:active,
-        &.is-active {
-        }
+        &.is-active {}
         &[disabled],
         &:disabled,
         fieldset[disabled] .button {
@@ -44,16 +44,17 @@
     // Button modifiers
 
     // Buttons sizes
+
     .button--small {
-        .button-size(.75);
+        .button-size(@button-small-font-size, @button-small-height);
     }
 
     .button--large {
-        .button-size(1.5);
+        .button-size(@button-large-font-size, @button-large-height);
     }
 
     .button--huge {
-        .button-size(2);
+        .button-size(@button-huge-font-size, @button-huge-height);
     }
 
     .button--block {
@@ -64,6 +65,7 @@
     }
 
     // Button variations
+
     .button--pill {
         border-radius: 999em;
     }
@@ -73,27 +75,25 @@
         padding: 0 !important;
         width: @button-height;
         &.button--small {
-            width: ceil(@button-height * .75);
+            width: @button-small-height;
         }
         &.button--large {
-            width: ceil(@button-height * 1.5);
+            width: @button-large-height;
         }
         &.button--huge {
-            width: ceil(@button-height * 2);
+            width: @button-huge-height;
         }
     }
 
     .button--link {
+        background-color: transparent;
         border-radius: 0;
         box-shadow: none;
         color: @base-color;
-        font-weight: 400;
         height: auto;
         line-height: inherit;
-        padding: 0;
         vertical-align: baseline;
         white-space: normal;
-        text-align: left;
         &,
         &:hover,
         &:focus,
@@ -107,7 +107,6 @@
         }
     }
 
-
     .button--default {
         background-color: transparent;
         border-color: @grey-800;
@@ -115,30 +114,28 @@
         &:hover,
         &:focus,
         &:active,
-        &.is-active{
+        &.is-active {
             background-color: @grey-800;
             border-color: @grey-800;
             color: contrast(@grey-800, @base-color);
         }
     }
 
-
     .button--primary {
         // styles here
-        background-color: transparent;
+        background-color: @color-primary;
         border-color: @color-primary;
-        color: @color-primary;
+        color: @white;
         &:hover,
         &:focus,
         &:active,
         &.is-active {
             // styles here
-            background-color: @color-primary;
-            border-color: @color-primary;
+            background-color: @color-primary-accent;
+            border-color: @color-primary-accent;
             color: contrast(@color-primary, @base-color);
         }
     }
-
 
     .button--secondary {
         // styles here
@@ -156,7 +153,7 @@
         }
     }
 
-    .button--primary-variation {
+    .button--success {
         // styles here
         //background-color: @black;
         //border-color: @black;
@@ -171,23 +168,6 @@
             //color: @white;
         }
     }
-
-    .button--success {
-        // styles here
-            //background-color: @black;
-            //border-color: @black;
-            //color: @white;
-        &:hover,
-        &:focus,
-        &:active,
-        &.is-active {
-            // styles here
-            //background-color: @black;
-            //border-color: @black;
-            //color: @white;
-        }
-    }
-
 
     .button--warning {
         // styles here
@@ -237,5 +217,38 @@
         }
     }
 
+    //
+    // Button-group
+    .use-button-group(@boolean) when (@boolean =true) {
+    .button-group {
+        display: inline-flex;
+        flex-wrap: wrap;
+        .button {
+            flex: 1 0 auto;
+            &:first-child:not(:last-child) {
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+            &:not(:first-child):not(:last-child) {
+                margin-left: -@button-border-width;
+                border-radius: 0;
+            }
+            &:last-child:not(:first-child) {
+                margin-left: -@button-border-width;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+            }
+            &:hover,
+            &:focus {
+                z-index: 2; // rise hovered button above others
+            }
+        }
+        &.button-group--block {
+            display: flex;
+        }
+    }
+    }
+    .use-button-group(@use-button-group);
 }
+
 .use-buttons(@use-buttons);
