nav-responsive fixes and templates

--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -97,6 +97,12 @@
         }
     }
 
+    // Lead
+    .lead {
+        font-size: @lead-font-size;
+        font-weight: @lead-font-weight;
+    }
+
     // Blockquotes
 
     blockquote {
